--- a/index.html
+++ b/index.html
@@ -24,11 +24,36 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        /* Hamburger menu styling */
+        .menu-hidden {
+            transform: translateX(-100%);
+        }
+        .menu-visible {
+            transform: translateX(0);
+        }
     </style>
 </head>
 <body class="bg-[#FDF8F0] text-[#333333] flex flex-col items-center justify-center min-h-screen p-4 sm:p-6 md:p-8">
+
+    <!-- Hamburger Menu & Backdrop -->
+    <div id="menu-backdrop" class="fixed inset-0 bg-black bg-opacity-50 hidden z-40"></div>
+    <nav id="hamburger-menu" class="fixed top-0 left-0 h-full w-64 bg-[#EAE0D5] p-6 shadow-2xl transform transition-transform duration-300 ease-in-out z-50 menu-hidden">
+        <div class="flex justify-end mb-4">
+            <button id="close-menu-btn" class="text-[#386641] text-2xl">&times;</button>
+        </div>
+        <h3 class="text-xl font-bold mb-4 text-[#386641]">Curriculum Modules</h3>
+        <ul id="menu-list" class="space-y-4"></ul>
+    </nav>
+    
     <div class="bg-[#EAE0D5] rounded-xl shadow-2xl p-6 sm:p-8 md:p-10 w-full max-w-4xl">
-        <h1 class="text-3xl font-bold text-[#386641] mb-6 text-center">Interactive Toolroom Curriculum</h1>
+        <header class="flex justify-between items-center mb-6">
+            <h1 class="text-2xl sm:text-3xl font-bold text-[#386641]">Interactive Toolroom Curriculum</h1>
+            <button id="hamburger-btn" class="text-[#386641] text-3xl focus:outline-none focus:ring-2 focus:ring-[#A7C957] p-2 rounded-md">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                </svg>
+            </button>
+        </header>
 
         <div id="slides-container" class="space-y-6">
             <!-- Slide content will be rendered here dynamically -->
@@ -314,6 +339,14 @@
     const modalBody = document.getElementById('modal-body');
     const closeModalBtn = document.getElementById('close-modal-btn');
 
+    const hamburgerBtn = document.getElementById('hamburger-btn');
+    const hamburgerMenu = document.getElementById('hamburger-menu');
+    const closeMenuBtn = document.getElementById('close-menu-btn');
+    const menuList = document.getElementById('menu-list');
+    const menuBackdrop = document.getElementById('menu-backdrop');
+
+    let isMenuOpen = false;
+
     async function generateContentWithGemini(userPrompt, systemPrompt) {
         modalTitle.textContent = 'Generating...';
         modalBody.innerHTML = '<div class="flex justify-center items-center"><div class="spinner"></div></div>';
@@ -363,7 +396,6 @@
             slideDiv.id = slide.id;
             slideDiv.className = `slide ${index === currentSlideIndex ? 'active' : ''}`;
             
-            // Add quiz button to all slides
             const quizButtonHtml = `
                 <div class="mt-8 pt-4 border-t border-gray-300">
                     <button class="generate-quiz-btn px-6 py-3 bg-[#A7C957] text-white font-semibold rounded-full shadow-lg hover:bg-[#8da747] transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-[#A7C957]">
@@ -381,9 +413,9 @@
         const slideToShow = document.querySelectorAll('.slide')[index];
         if (slideToShow) {
             slideToShow.classList.add('active');
+            currentSlideIndex = index;
             window.scrollTo(0, 0);
 
-            // Initialize interactive elements based on the current slide ID
             if (slideToShow.id === 'module-2') {
                 initPlasticsChart();
             } else if (slideToShow.id === 'module-4') {
@@ -402,17 +434,48 @@
 
     nextBtn.addEventListener('click', () => {
         if (currentSlideIndex < curriculumData.length - 1) {
-            currentSlideIndex++;
-            showSlide(currentSlideIndex);
+            showSlide(currentSlideIndex + 1);
         }
     });
 
     prevBtn.addEventListener('click', () => {
         if (currentSlideIndex > 0) {
-            currentSlideIndex--;
-            showSlide(currentSlideIndex);
+            showSlide(currentSlideIndex - 1);
         }
     });
+
+    // --- Hamburger Menu Logic ---
+    function toggleMenu() {
+        isMenuOpen = !isMenuOpen;
+        if (isMenuOpen) {
+            hamburgerMenu.classList.remove('menu-hidden');
+            hamburgerMenu.classList.add('menu-visible');
+            menuBackdrop.classList.remove('hidden');
+        } else {
+            hamburgerMenu.classList.remove('menu-visible');
+            hamburgerMenu.classList.add('menu-hidden');
+            menuBackdrop.classList.add('hidden');
+        }
+    }
+
+    hamburgerBtn.addEventListener('click', toggleMenu);
+    closeMenuBtn.addEventListener('click', toggleMenu);
+    menuBackdrop.addEventListener('click', toggleMenu);
+
+    function renderMenuLinks() {
+        menuList.innerHTML = curriculumData.map((slide, index) => `
+            <li>
+                <button class="text-left w-full p-2 rounded-md hover:bg-[#A7C957] hover:text-white transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-[#A7C957]" onclick="showAndCloseMenu(${index})">
+                    ${slide.title}
+                </button>
+            </li>
+        `).join('');
+    }
+
+    window.showAndCloseMenu = function(index) {
+        showSlide(index);
+        toggleMenu();
+    };
 
     // --- Interactive Element Initializers ---
     let plasticsChartInstance = null;
@@ -553,6 +616,7 @@
     // --- Initial Render & Event Listeners ---
     document.addEventListener('DOMContentLoaded', () => {
         renderSlides();
+        renderMenuLinks();
         showSlide(currentSlideIndex);
 
         document.body.addEventListener('click', async (e) => {
